add buildings buffer files

--- a/code/00_label_data/01_buildings_exploration.ipynb
+++ b/code/00_label_data/01_buildings_exploration.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,13 +65,12 @@
     "    \"microsoft_buildings\",\n",
     "    \"California.geojson\"\n",
     ")\n",
-    "\n",
     "buildings_ca = gpd.read_file(buildings_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +79,7 @@
        "(11542912, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,8 +118,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save subsetted buildings to file\n",
+    "\n",
+    "located in \"data/microsoft_buildings/sb_buildings.geojson\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sb_buildings_path = os.path.join(\n",
+    "    config.data_dir, \n",
+    "    \"microsoft_buildings\", \n",
+    "    \"sb_buildings.geojson\"\n",
+    "    )\n",
+    "buildings.to_file(sb_buildings_path, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +151,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1932,7 @@
        "[14790 rows x 110 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1930,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
